[gd_scene load_steps=74 format=2]

[ext_resource path="res://Player.png" type="Texture" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://SwordHitBox.gd" type="Script" id=3]
[ext_resource path="res://SwordHitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://gradiant.png" type="Texture" id=5]
[ext_resource path="res://HurtBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://MediumShadow.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.73952, 4.90453 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.276923, 0.307692, 0.707692, 0.953846, 0.984615, 1 )
colors = PoolColorArray( 0.483615, 0.462375, 0.464856, 0.985, 0.584615, 0.584615, 0.584615, 1, 0.113281, 0.0141602, 0.0257383, 0.93, 0.392715, 0.352359, 0.357073, 0.9715, 0.427344, 0.39427, 0.398133, 0.976643, 1, 1, 1, 1, 0.332115, 0.279014, 0.285217, 0.9625 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
trail_divisor = 2
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 25.0
damping = 41.07
angle = 720.0
scale = 2.0
scale_random = 1.0
color_ramp = SubResource( 3 )
hue_variation = 0.12
hue_variation_random = 0.21

[sub_resource type="Animation" id=5]
resource_name = "Attack_down"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordHitPosition:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SwordHitPosition/SwordHitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=6]
resource_name = "Attack_left"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordHitPosition:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SwordHitPosition/SwordHitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "Attack_right"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordHitPosition:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SwordHitPosition/SwordHitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=8]
resource_name = "Attack_up"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordHitPosition:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 270.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SwordHitPosition/SwordHitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=9]
resource_name = "Bullet_Right"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 13, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fire_state_finished"
} ]
}

[sub_resource type="Animation" id=10]
length = 0.6
loop = true

[sub_resource type="Animation" id=11]

[sub_resource type="Animation" id=12]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=13]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=14]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=15]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=16]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=17]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 55, 56, 57, 58, 59 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_state_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=18]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 53, 54 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_state_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=19]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_state_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=20]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 45, 46, 47, 48, 49 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_state_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=21]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 18 ]
}

[sub_resource type="Animation" id=22]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 15 ]
}

[sub_resource type="Animation" id=23]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 0 ]
}

[sub_resource type="Animation" id=24]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 6 ]
}

[sub_resource type="Animation" id=25]
resource_name = "Shoot_Left"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -13, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fire_state_finished"
} ]
}

[sub_resource type="Animation" id=26]
resource_name = "Shoot_down"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 16 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fire_state_finished"
} ]
}

[sub_resource type="Animation" id=27]
resource_name = "Shoot_up"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fire_state_finished"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "Attack_left"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "Attack_down"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "Attack_right"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "Attack_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=32]
blend_point_0/node = SubResource( 28 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 29 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 30 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 31 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "Shoot_Left"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "Shoot_down"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "Shoot_up"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "Bullet_Right"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "Shoot_down"

[sub_resource type="AnimationNodeBlendSpace2D" id=38]
auto_triangles = false
blend_point_0/node = SubResource( 33 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 34 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 35 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 36 )
blend_point_3/pos = Vector2( 1, 0 )
blend_point_4/node = SubResource( 37 )
blend_point_4/pos = Vector2( 0, 1 )
triangles = PoolIntArray( 0, 1, 4, 1, 3, 4, 0, 2, 4, 2, 3, 4 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "Idle_left"

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "Idle_down"

[sub_resource type="AnimationNodeAnimation" id=41]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "Idle_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=43]
blend_point_0/node = SubResource( 39 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 40 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 41 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 42 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=44]
animation = "Roll_left"

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "Roll_down"

[sub_resource type="AnimationNodeAnimation" id=46]
animation = "Roll_right"

[sub_resource type="AnimationNodeAnimation" id=47]
animation = "Roll_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=48]
blend_point_0/node = SubResource( 44 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 45 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 46 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 47 )
blend_point_3/pos = Vector2( 0, -1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=49]
animation = "Run_left"

[sub_resource type="AnimationNodeAnimation" id=50]
animation = "Run_down"

[sub_resource type="AnimationNodeAnimation" id=51]
animation = "Run_right"

[sub_resource type="AnimationNodeAnimation" id=52]
animation = "Run_up"

[sub_resource type="AnimationNodeAnimation" id=53]
animation = "Idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id=54]
blend_point_0/node = SubResource( 49 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 50 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 51 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 52 )
blend_point_3/pos = Vector2( 0, -1.1 )
blend_point_4/node = SubResource( 53 )
blend_point_4/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=55]

[sub_resource type="AnimationNodeStateMachineTransition" id=56]

[sub_resource type="AnimationNodeStateMachineTransition" id=57]

[sub_resource type="AnimationNodeStateMachineTransition" id=58]

[sub_resource type="AnimationNodeStateMachineTransition" id=59]

[sub_resource type="AnimationNodeStateMachineTransition" id=60]

[sub_resource type="AnimationNodeStateMachineTransition" id=61]

[sub_resource type="AnimationNodeStateMachineTransition" id=62]

[sub_resource type="AnimationNodeStateMachine" id=63]
states/Attack/node = SubResource( 32 )
states/Attack/position = Vector2( 293, 187 )
states/Bullet/node = SubResource( 38 )
states/Bullet/position = Vector2( 120, 69 )
states/Idle/node = SubResource( 43 )
states/Idle/position = Vector2( 293, 69 )
states/Roll/node = SubResource( 48 )
states/Roll/position = Vector2( 505, 187 )
states/Run/node = SubResource( 54 )
states/Run/position = Vector2( 505, 69 )
transitions = [ "Idle", "Run", SubResource( 55 ), "Run", "Idle", SubResource( 56 ), "Idle", "Attack", SubResource( 57 ), "Attack", "Idle", SubResource( 58 ), "Run", "Roll", SubResource( 59 ), "Roll", "Run", SubResource( 60 ), "Bullet", "Idle", SubResource( 61 ), "Idle", "Bullet", SubResource( 62 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=64]

[sub_resource type="CapsuleShape2D" id=65]
radius = 23.3852
height = 55.8477

[sub_resource type="CircleShape2D" id=66]
radius = 5.64129

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2147483649
script = ExtResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( -1, 11 )
texture = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 60
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.779916, 7.64034 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Move_Particles" type="Particles2D" parent="."]
position = Vector2( 0, 20.4158 )
rotation = 1.5708
emitting = false
amount = 4
lifetime = 1.4
speed_scale = 0.75
local_coords = false
process_material = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack_down = SubResource( 5 )
anims/Attack_left = SubResource( 6 )
anims/Attack_right = SubResource( 7 )
anims/Attack_up = SubResource( 8 )
anims/Bullet_Right = SubResource( 9 )
anims/Dust = SubResource( 10 )
anims/HitFlash = SubResource( 11 )
anims/Idle = SubResource( 12 )
anims/Idle_down = SubResource( 13 )
anims/Idle_left = SubResource( 14 )
anims/Idle_up = SubResource( 15 )
anims/Jump = SubResource( 16 )
anims/Roll_down = SubResource( 17 )
anims/Roll_left = SubResource( 18 )
anims/Roll_right = SubResource( 19 )
anims/Roll_up = SubResource( 20 )
anims/Run_down = SubResource( 21 )
anims/Run_left = SubResource( 22 )
anims/Run_right = SubResource( 23 )
anims/Run_up = SubResource( 24 )
anims/Shoot_Left = SubResource( 25 )
anims/Shoot_down = SubResource( 26 )
anims/Shoot_up = SubResource( 27 )

[node name="Light2D2" type="Light2D" parent="."]
position = Vector2( -1.52588e-05, -3.36739 )
enabled = false
texture = ExtResource( 5 )
mode = 2
range_item_cull_mask = 32
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 63 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 64 )
parameters/Attack/blend_position = Vector2( 0.1, 0 )
parameters/Bullet/blend_position = Vector2( 0.0693878, -0.0172414 )
parameters/Idle/blend_position = Vector2( 0.1, 0 )
parameters/Roll/blend_position = Vector2( 0.1, 0 )
parameters/Run/blend_position = Vector2( 0, 0 )

[node name="SwordHitPosition" type="Position2D" parent="."]
position = Vector2( 0, 5 )
rotation = 1.5708
__meta__ = {
"_edit_lock_": true
}

[node name="SwordHitBox" parent="SwordHitPosition" instance=ExtResource( 4 )]
position = Vector2( 15, 0 )
collision_layer = 0
collision_mask = 8
script = ExtResource( 3 )

[node name="CollisionShape2D" parent="SwordHitPosition/SwordHitBox" index="0"]
scale = Vector2( 0.291009, 0.0277661 )
shape = SubResource( 65 )
disabled = true

[node name="HurtBox" parent="." instance=ExtResource( 6 )]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( -1.36403, -5.48454 )
shape = SubResource( 66 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 13, 0 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 50, 0 )
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="SwordHitPosition/SwordHitBox"]

[editable path="HurtBox"]
